tests/baselines/reference/templateStringInModuleNameES6.errors.txt
tests/cases/conformance/es6/templates/templateStringInModuleNameES6.ts(1,1): error TS2304: Cannot find name 'declare'.
tests/cases/conformance/es6/templates/templateStringInModuleNameES6.ts(1,9): error TS1005: ';' expected.
tests/cases/conformance/es6/templates/templateStringInModuleNameES6.ts(1,9): error TS2304: Cannot find name 'module'.
tests/cases/conformance/es6/templates/templateStringInModuleNameES6.ts(1,21): error TS1005: ';' expected.
tests/cases/conformance/es6/templates/templateStringInModuleNameES6.ts(4,1): error TS2304: Cannot find name 'declare'.
tests/cases/conformance/es6/templates/templateStringInModuleNameES6.ts(4,9): error TS1005: ';' expected.
tests/cases/conformance/es6/templates/templateStringInModuleNameES6.ts(4,9): error TS2304: Cannot find name 'module'.
tests/cases/conformance/es6/templates/templateStringInModuleNameES6.ts(4,24): error TS1005: ';' expected.


==== tests/cases/conformance/es6/templates/templateStringInModuleNameES6.ts (8 errors) ====
    declare module `M1` {
    ~~~~~~~
!!! error TS2304: Cannot find name 'declare'.
            ~~~~~~
!!! error TS1005: ';' expected.
            ~~~~~~
!!! error TS2304: Cannot find name 'module'.
                        ~
!!! error TS1005: ';' expected.
    }
    
    declare module `M${2}` {
    ~~~~~~~
!!! error TS2304: Cannot find name 'declare'.
            ~~~~~~
!!! error TS1005: ';' expected.
            ~~~~~~
!!! error TS2304: Cannot find name 'module'.
                           ~
!!! error TS1005: ';' expected.
    }